applied   overflow-x: hidden to body and html in index.css as a quick dirty solotion to debug mobile space issue, to be reviewed later

--- a/src/Components/BioHeader.css
+++ b/src/Components/BioHeader.css
@@ -6,6 +6,8 @@
   margin-top: 60px;
   margin-bottom: 100px;
   flex: 1;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 @media only screen and (max-width: 894px) {
