--- a/src/Components/City.css
+++ b/src/Components/City.css
@@ -3,8 +3,9 @@
   display: grid;
   grid-template: 1fr / 1fr;
   place-items: center;
-  max-width: 100%;
+  max-width: 100vw;
   height: 70vh;
+
   overflow: hidden;
 }
 
