--- a/src/Components/PortfolioItem.css
+++ b/src/Components/PortfolioItem.css
@@ -3,6 +3,7 @@
   justify-content: space-between;
   height: 250px;
   width: 420px;
+  max-width: 100%;
   position: relative;
   border-radius: 20px;
   margin: 10px;
@@ -41,6 +42,11 @@
   .portfolioItem__title {
     margin-left: 0px;
     margin-bottom: 10px;
+  }
+}
+@media only screen and (max-width: 400px) {
+  .portfolioItem__title {
+    font-size: 1.5rem;
   }
 }
 
