--- a/src/Components/Projects.css
+++ b/src/Components/Projects.css
@@ -1,11 +1,10 @@
 .projects {
-  width: 100vw;
-  overflow-x: hidden;
   background-color: white;
   padding-top: 50px;
   padding-bottom: 100px;
   border-radius: 0px 0px 50px 50px;
   box-shadow: 0px 5px 5px #00000050;
+  overflow: hidden;
 }
 
 .projects::before {
